<resources>
    <string name="greeting_fragment_label">Greeting Fragment</string>
    <string name="allow_camera_fragment_label">Allow Camera Fragment</string>
    <string name="place_finger_fragment_label">Place Finger Fragment</string>
    <string name="denied_permissions_fragment_label">Denied Permissions Fragment</string>
    <string name="scanning_fragment_label">Scanning Fragment</string>
    <string name="calculating_fragment_label">Calculating Fragment</string>
    <string name="server_side_error_fragment_label">Server Side Error Fragment</string>
    <string name="results_fragment_label">Results Fragment</string>
    <string name="information_fragment_label">Information Fragment</string>
    <string name="scanning_body_comp_fragment_label">Scanning Body Composition Fragment</string>
    <string name="greeting_body_comp_fragment_label">Greeting Body Composition Fragment</string>
    <string name="privacy_body_comp_fragment_label">Privacy Body Composition Fragment</string>
    <string name="accuracy_body_comp_fragment_label">Accuracy Body Composition Fragment</string>
    <string name="weight_body_comp_fragment_label">Weight Body Composition Fragment</string>
    <string name="age_body_comp_fragment_label">Age Body Composition Fragment</string>
    <string name="gender_body_comp_fragment_label">Gender Body Composition Fragment</string>
    <string name="activity_level_body_comp_fragment_label">Activity Level Body Composition Fragment</string>
    <string name="result_body_comp_fragment_label">Result Body Composition Fragment</string>
    <string name="result_info_body_comp_fragment_label">Result Info Body Composition Fragment</string>
    <string name="server_side_error_body_comp_fragment_label">Server Side Error Body Composition Fragment</string>
    <string name="body_position_error_body_comp_fragment_label">Body Position Error Body Composition Fragment</string>
    <string name="height_body_comp_fragment_label">Height Body Composition Fragment</string>
    <string name="setup_body_comp_fragment_label">Setup Body Composition Fragment</string>
    <string name="analyzing_body_comp_fragment_label">Analyzing Body Composition Fragment</string>
    <string name="confirmation_body_comp_fragment_label">Confirmation Body Composition Fragment</string>
    <string name="denied_permissions_body_comp_fragment_label">Denied Permissions Fragment</string>
    <string name="faq_fragment_label">Faq Fragment</string>
    <string name="next">Next</string>
    <string name="start_measurement">Start measurement</string>
    <string name="enable_camera">Enable camera</string>
    <string name="try_again">Try again</string>
    <string name="measure_hrv_title_1">Measure your HRV and recovery with your phone camera</string>
    <string name="measure_hrv_title_2">Take a moment to measure your recovery</string>
    <string name="measure_hrv_text">Simply do a quick resting scan to receive personalized stress and recovery insights.</string>
    <string name="first_bullet_text">Refrain from strenuous activity for at least 15 minutes prior to reading</string>
    <string name="second_bullet_text">Sit calmly for 1 minute before reading</string>
    <string name="third_bullet_text">If needed, take 6 deep and slow breaths before starting reading then breathe naturally during the reading</string>
    <string name="measure_hrv_text_2">For best HRV and recovery results:</string>
    <string name="place_your_fingertip_title">Place your fingertip over the rear-facing camera lens</string>
    <string name="place_your_fingertip_text">For the most accurate reading, leave the flash on or make sure you’re in a well lit area and can hold your hand steady</string>
    <string name="place_finger_title">Place your fingertip fully over the camera lens</string>
    <string name="place_finger_text">Hold your hand steady and apply light pressure with your finger.</string>
    <string name="denied_permissions_title">Camera access is needed to start an HRV measurement</string>
    <string name="denied_permissions_text">Allow access to camera in your Android Settings in order to receive personalized insights and guidance.</string>
    <string name="calculating_title">Calculating your results</string>
    <string name="network_error_title">Network Connection Error</string>
    <string name="network_error_text">Please check your internet connection and try again.</string>
    <string name="network_error_primary_button_text">Try again</string>
    <string name="network_error_secondary_button_text">Close</string>
    <string name="for_investigational_use_only_text">* For investigational use only. These numbers are estimates and not a substitute for the judgment of a health care professional. They are intended to improve awareness of general fitness and wellness.</string>
    <string name="server_side_error_title">Sorry! There was an error calculating your results</string>
    <string name="server_side_error_text">Please take another measurement to view your HRV results.</string>
    <string name="done">Done</string>
    <string name="recovery">Recovery</string>
    <string name="recover">Recover</string>
    <string name="train_hard">Train hard</string>
    <string name="ans_balance">ANS Balance</string>
    <string name="sympathetic">Sympathetic</string>
    <string name="parasympathetic">Parasympathetic</string>
    <string name="hrv_score">HRV Score</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="bpm">bpm</string>
    <string name="rpm">rpm</string>
    <string name="respiration">Respiration</string>
    <string name="faq_title">FAQ</string>
    <string name="hrv_question">What is HRV and why does it matter?</string>
    <string name="score_question">How do I get the best results?</string>
    <string name="repeat_question">How often should I measure?</string>
    <string name="recovery_bar_title">Recovery</string>
    <string name="ans_balance_bar_title">ANS Balance</string>
    <string name="hrv_score_bar_title">HRV Score</string>
    <string name="heart_rate_bar_title">Heart Rate</string>
    <string name="respiration_rate_bar_title">Respiration Rate</string>
    <string name="hrv_score_title">What is HRV?</string>
    <string name="heart_rate_title">What is resting heart rate?</string>
    <string name="respiration_rate_title">What is resting respiratory rate?</string>
    <string name="recovery_first_text">Your Recovery Score is a personalized daily score that quantifies how recovered you are and how ready you are to take on the day.\n\n

This 1-10 score uses key heart rate and heart rate variability (HRV) metrics to learn your personal patterns and provide insight into how your body is adapting to things like exercise, stress, nutrition, work, and more. It helps you understand when your body is ready to perform and when you need to focus on rest and recovery.</string>
    <string name="ans_balance_first_text">The autonomic nervous system (ANS) controls almost all of the body’s “automatic” processes. It regulates bodily functions such as heart rate, blood sugar, blood pressure, temperature, energy, digestion, sexual function, tissue repair, and more.
</string>
    <string name="hrv_score_first_text">Your HRV Score is a 1-100 score that indicates your stress levels, recovery status, and general well-being.\n\n

Unlike basic heart rate (HR) that counts the number of heartbeats per minute, heart rate variability (HRV) looks much closer at the subtle variations between heartbeats that originate from your nervous system.\n\n

HRV is considered the best, non-invasive measure of your Autonomic Nervous System and reveals how your body responds to exercise, illness, treatment, recovery, inflammation, stress, mental health, and lifestyle choices you make.\n\n

A higher HRV Score generally indicates better health and fitness and lower stress, as well as a younger biological age.
</string>
    <string name="heart_rate_first_text">Resting heart rate (RHR) is a measure of your average number of heart beats per minute (bpm) while at rest. 60-100 bpm is considered normal for healthy adults. Highly trained athletes can have resting heart rates as low as 40 bpm.\n\n

Resting heart rate is a useful metric for monitoring your fitness level and overall health. Generally speaking, a lower resting heart rate indicates a stronger and healthier heart muscle. People with lower resting heart rates typically have better cardiorespiratory fitness and tend to live longer.\n\n

A short-term increase in resting heart rate can indicate physiological stress from things like exercise, stress and anxiety, sleep deprivation, illness onset, etc.\n\n

To get an accurate resting heart rate measurement, ideally measure while in an inactive state such as seated, standing, or lying down without moving.</string>
    <string name="respiration_rate_first_text">Respiratory rate, or breathing rate, is the number of respirations (i.e. breaths) you take per minute while at rest. The normal respiration rate for an adult at rest is 12 to 20  breaths per minute. A respiration rate under 12 or over 20 breaths per minute while resting is considered abnormal.\n\n

Resting respiration rate can indicate general cardiorespiratory fitness. Acute changes in resting respiratory rate can indicate poor rest and recovery or the onset of illness.\n\n

Your respiratory rate is calculated via raw heart rate data by taking advantage of Respiratory Sinus Arrhythmia, a normal phenomenom where the heart rate varies with respiration.
</string>
    <string name="ans_balance_second_text">
The ANS Balance indicates the relative balance between thethe SNS and PSNS, thus indicating the balance between recovery and physiological stress (both physical and mental).\n\n

Knowing the relative balance of the ANS helps you better understand the current state of your body and determine the best course of action towards reaching your goals without working against yourself.</string>
    <string name="results">Results</string>
    <string name="hrv_first_reading_score_text">HRV is an indicator of overall health and fitness. A higher HRV score means better health and fitness and lower stress.</string>
    <string name="respiration_first_reading_score_text">Resting respiratory rate is a key indicator of health. Changes in daily resting respiration can indicate recovery issues or illness onset.</string>
    <string name="hr_first_reading_score_text">Resting heart rate can reflect your current and future health. A lower heart rate indicates better cardiovascular fitness and increased longevity.</string>
    <string name="improve_hrv_title">How do I improve my HRV?</string>
    <string name="improve_hrv_text">Healthy behaviors can increase your HRV. Here are some proven ways to increase your HRV:</string>
    <string name="improve_hrv_stay_active_title">Stay active</string>
    <string name="improve_hrv_stay_active_text">Avoid being sedentary and exercise appropriately; athletes should avoid overtraining.</string>
    <string name="improve_hrv_sleep_well_title">Sleep well and consistently</string>
    <string name="improve_hrv_sleep_well_text">Consistent, quality sleep is key to recovering from daily stressors.</string>
    <string name="improve_hrv_eat_well_title">Eat well</string>
    <string name="improve_hrv_eat_well_text">Reduce inflammatory foods and alcohol and prioritize nutrient rich foods; avoid large meals close to bedtime.</string>
    <string name="improve_hrv_hydrate_title">Hydrate</string>
    <string name="try_it_now">Try it now</string>
    <string name="sorry_there_was_an_error_calculating_your_results">Sorry! There was an error calculating your results</string>
    <string name="please_take_another_photo_to_view_your_body_composition_results">Please take another photo to view your body composition results.</string>
</resources>